--- a/plantilla-wp.ejs
+++ b/plantilla-wp.ejs
@@ -11,7 +11,7 @@
 
 	<div class="medidas">   
 	<% medidas.forEach(function(medida){ %>
-		<div id="medida-<%= medida.num %>"class="medidas-programa" data-eje="<%= medida.eje %>">
+		<div id="medida-<%= medida.num %>" class="medidas-programa" data-eje="<%= medida.eje %>">
 		    <div class="numero-medida"><%= medida.num %></div>
 		    <div class="titulo-medida">
 		        <h4><%= medida.titulo %></h4>
@@ -48,6 +48,9 @@
 <script>
 
 ;(function($) {
+
+  var url_base = 'https://unpaiscontigo.es/programa/';
+
 	$('.medidas-programa .titulo-medida h4').on('click', function(e) {
 		var descripcion = $(this).parent().find('.descripcion-medida');
 		($(descripcion).is(':visible'))?$(descripcion).slideUp():$(descripcion).slideDown();
@@ -67,13 +70,34 @@
 	$('.ramas a').on('click', function(e) {
 		e.preventDefault();
 		var eje = $(this).data('rel');
-		$(this).parents('a').removeClass('activo');
+		$('.ramas a').removeClass('activo');
 		$(this).addClass('activo');
 		$('.medidas-programa').hide();
 		$('[data-eje="'+eje+'"]').each(function() {
 			$(this).fadeIn();
 		});
 	});
+  // social
+  $('.social .fa-facebook-official').parent().on('click', function(e) {
+		e.preventDefault();
+    var winTop = (screen.height / 2) - (350 / 2);
+    var winLeft = (screen.width / 2) - (520 / 2);
+    var medida = $(this).parents('.medidas-programa');
+    var title = encodeURI($(medida).find('.titulo-medida').text());
+    var desc = encodeURI($(medida).find('.descripcion-medida').text());
+    var url = encodeURI(url_base + '?#'+$(medida).attr('id'));
+    var image = 'https://unpaiscontigo.es/wp-content/themes/html5blank-stable/img/eje-1.png';
+    window.open('https://www.facebook.com/sharer.php?s=100&p[title]=' + title + '&p[summary]=' + descr + '&p[url]=' + url + '&p[images][0]=' + image, 'sharer', 'top=' + winTop + ',left=' + winLeft + ',toolbar=0,status=0,width=520,height=350');
+  });
+  $('.social .fa-twitter').parent().on('click', function(e) {
+		e.preventDefault();
+    var winTop = (screen.height / 2) - (350 / 2);
+    var winLeft = (screen.width / 2) - (520 / 2);
+    var medida = $(this).parents('.medidas-programa');
+    var url = encodeURI(url_base + '?#'+$(medida).attr('id'));
+    var tweet = encodeURI($(medida).find('.titulo-medida').text()) + ' ' + url;
+    window.open('https://twitter.com/home?status=' + tweet, 'sharer', 'top=' + winTop + ',left=' + winLeft + ',toolbar=0,status=0,width=520,height=350');
+  });
 })(jQuery);
 
 </script>
