--- a/plantilla-wp.ejs
+++ b/plantilla-wp.ejs
@@ -87,7 +87,8 @@
     var descr = encodeURI($(medida).find('.descripcion-medida').text());
     var url = encodeURI(url_base + '?#'+$(medida).id);
     var image = 'https://unpaiscontigo.es/wp-content/themes/html5blank-stable/img/eje-1.png';
-    window.open('https://www.facebook.com/sharer.php?s=100&p[title]=' + title + '&p[summary]=' + descr + '&p[url]=' + url + '&p[images][0]=' + image, 'sharer', 'top=' + winTop + ',left=' + winLeft + ',toolbar=0,status=0,width=520,height=350');
+    //window.open('https://www.facebook.com/sharer.php?s=100&p[title]=' + title + '&p[summary]=' + descr + '&p[url]=' + url + '&p[images][0]=' + image, 'sharer', 'top=' + winTop + ',left=' + winLeft + ',toolbar=0,status=0,width=520,height=350');
+    window.open('https://www.facebook.com/sharer/sharer.php?u=' + url, 'sharer', 'top=' + winTop + ',left=' + winLeft + ',toolbar=0,status=0,width=520,height=350');
   });
   $('.social .fa-twitter').parent().on('click', function(e) {
 		e.preventDefault();
