--- a/plantilla-wp.ejs
+++ b/plantilla-wp.ejs
@@ -34,8 +34,8 @@
 
     <div class="categorias-programa">
         <h3>Descargas</h3>
-        <p><i class="fa fa-file-pdf-o"></i><a href="http://unpaiscontigo.es/wp-content/uploads/2015/11/programa_economica.pdf" target="_blank">Descarga el programa económica</a></p>
-        <p><i class="fa fa-file-pdf-o"></i><a href="http://unpaiscontigo.es/wp-content/uploads/2015/11/programa_juridica.pdf" target="_blank">Descarga el programa jurídica</a></p>
+        <p><i class="fa fa-file-pdf-o"></i><a href="http://unpaiscontigo.es/wp-content/uploads/2015/11/programa_economica.pdf" class="pdf" target="_blank">Descarga la memoria económica</a></p>
+        <p><i class="fa fa-file-pdf-o"></i><a href="http://unpaiscontigo.es/wp-content/uploads/2015/11/programa_juridica.pdf" class="pdf" target="_blank">Descarga la memoria jurídica</a></p>
         <h3>Temas</h3>
         <div class="categoria-propuestas">
         <% etiquetas.forEach(function(categoria) { %>
