--- a/plantilla-wp.ejs
+++ b/plantilla-wp.ejs
@@ -34,6 +34,7 @@
 
     <div class="categorias-programa">
         <h3>Descargas</h3>
+        <p><i class="fa fa-file-pdf-o"></i><a href=http://unpaiscontigo.es/wp-content/uploads/2015/11/Programa-generales-definitivo-2015_11_23.pdf class=pdf target=_blank>Descarga el programa electoral en PDF</a></p>
         <p><i class="fa fa-file-pdf-o"></i><a href="http://unpaiscontigo.es/wp-content/uploads/2015/11/programa_economica.pdf" class="pdf" target="_blank">Descarga la memoria económica</a></p>
         <p><i class="fa fa-file-pdf-o"></i><a href="http://unpaiscontigo.es/wp-content/uploads/2015/11/programa_juridica.pdf" class="pdf" target="_blank">Descarga la memoria jurídica</a></p>
         <h3>Temas</h3>
