Vista medida individual

--- a/plantilla-wp.ejs
+++ b/plantilla-wp.ejs
@@ -119,7 +119,7 @@
     $('.medidas-programa').hide();
     $('#medida-'+medidas[i]).fadeIn(function() {
       //$('#medida-'+medidas[i]+' h4').click();
-      $('#medida-'+medidas[i]+' .descripcion-medida').show();
+      $('#medida-'+medidas[i]+'.titulo-medida .descripcion-medida').show();
     });
   }
 })(jQuery);
