--- a/plantilla-wp.ejs
+++ b/plantilla-wp.ejs
@@ -33,16 +33,19 @@
 	</div>
 
     <div class="categorias-programa">
+
         <h3><i class="fa fa-file-pdf-o"></i> Descargas</h3>
-        <p><a href="http://unpaiscontigo.es/wp-content/uploads/2015/11/Programa-Elecciones-Generales-Podemos-2015.pdf" class="pdf" target=_blank>Descarga el programa electoral en PDF</a></p>
-        <p><a href="http://unpaiscontigo.es/wp-content/uploads/2015/11/programa_economica.pdf" class="pdf" target="_blank">Descarga la memoria económica</a></p>
-        <p><a href="http://unpaiscontigo.es/wp-content/uploads/2015/11/programa_juridica.pdf" class="pdf" target="_blank">Descarga la memoria jurídica</a></p>
-        <h3>Temas</h3>
+        <p><a href="http://unpaiscontigo.es/wp-content/uploads/2015/11/Programa-Elecciones-Generales-Podemos-2015.pdf" class="pdf" target=_blank>Programa Electoral</a></p>
+        <p><a href="http://unpaiscontigo.es/wp-content/uploads/2015/11/programa_economica.pdf" class="pdf" target="_blank">Memoria Económica</a></p>
+        <p><a href="http://unpaiscontigo.es/wp-content/uploads/2015/11/programa_juridica.pdf" class="pdf" target="_blank">Memoria Jurídica</a></p>
+
+        <h3><i class="fa fa-book"></i> Temas</h3>
         <div class="categoria-propuestas">
         <% etiquetas.forEach(function(categoria) { %>
         	<a href="#" class="btn" data-rel="<%= categoria.slug %>"><%= categoria.nombre %></a>
         <% }); %>
         </div>
+
     </div>
 
 
