--- a/plantilla-wp-cat.ejs
+++ b/plantilla-wp-cat.ejs
@@ -47,9 +47,10 @@
     <div class="categorias-programa">
 
         <h3><i class="fa fa-file-pdf-o"></i> <%= i18n.__("Descargas") %></h3>
-        <p><a href="http://unpaiscontigo.es/wp-content/uploads/2015/12/Programa-Elecciones-Generales-Podemos-2015.pdf" class="pdf" target=_blank><%= i18n.__("Programa Electoral") %></a></p>
+        <p><a href="http://unpaiscontigo.es/wp-content/plugins/programa/data/programa-<%= idioma %>.pdf" class="pdf" target=_blank><%= i18n.__("Programa Electoral") %></a></p>
         <p><a href="http://unpaiscontigo.es/wp-content/uploads/2015/11/programa_economica.pdf" class="pdf" target="_blank"><%= i18n.__("Memoria Económica") %></a></p>
         <p><a href="http://unpaiscontigo.es/wp-content/uploads/2015/11/programa_juridica.pdf" class="pdf" target="_blank"><%= i18n.__("Memoria Jurídica") %></a></p>
+        <p><a href="http://unpaiscontigo.es/wp-content/plugins/programa/data/programa-lectura-facil.pdf" class="pdf" target="_blank">Programa de lectura fácil</a></p>
         <p><a href="http://unpaiscontigo.es/wp-content/uploads/2015/11/Programa_Cultura_Comunicacion_Podemos.pdf" class="pdf" target="_blank"><%= i18n.__("Programa de Cultura y Comunicación") %></a></p>
 
         <h3><i class="fa fa-book"></i> <%= i18n.__("Temas") %></h3>
