--- a/plantilla-wp-cat.ejs
+++ b/plantilla-wp-cat.ejs
@@ -50,6 +50,7 @@
         <p><a href="http://unpaiscontigo.es/wp-content/plugins/programa/data/programa-<%= idioma %>.pdf" class="pdf" target=_blank><%= i18n.__("Programa Electoral") %></a></p>
         <p><a href="http://unpaiscontigo.es/wp-content/uploads/2015/11/programa_economica.pdf" class="pdf" target="_blank"><%= i18n.__("Memoria Económica") %></a></p>
         <p><a href="http://unpaiscontigo.es/wp-content/uploads/2015/11/programa_juridica.pdf" class="pdf" target="_blank"><%= i18n.__("Memoria Jurídica") %></a></p>
+        <p><a href="http://unpaiscontigo.es/un-programa-contigo/" class="pdf"><%= i18n.__("Programa en vídeo") %></a></p>
         <p><a href="http://unpaiscontigo.es/wp-content/plugins/programa/data/programa-lectura-facil.pdf" class="pdf" target="_blank">Programa de lectura fácil</a></p>
         <p><a href="http://unpaiscontigo.es/wp-content/uploads/2015/11/Programa_Cultura_Comunicacion_Podemos.pdf" class="pdf" target="_blank"><%= i18n.__("Programa de Cultura y Comunicación") %></a></p>
 
@@ -133,7 +134,7 @@
     window.open('whatsapp://send?text=' + texto, 'sharer', 'top=' + winTop + ',left=' + winLeft + ',toolbar=0,status=0,width=520,height=350');
   });
   // devuelve array con las medidas a mostrar
-  function parsear_url() {
+  function dame_medidas_url() {
     var medidas = window.location.search;
     if (medidas.indexOf('medida=') > -1) {
       medidas=medidas.split('medida=');
@@ -143,12 +144,27 @@
     }
     return medidas;    
   }
-  var medidas =  parsear_url();
+  function dame_temas_url() {
+    var temas = window.location.search;
+    if (temas.indexOf('tema=') > -1) {
+      temas=temas.split('tema=');
+      temas=[decodeURI(temas[1])];
+    } else {
+      temas=[];
+    }
+    return temas;    
+  }
+  var medidas =  dame_medidas_url();
   for (i=0; i<medidas.length; i++) {
     $('.medidas-programa').hide();
     $('#medida-'+medidas[i]).fadeIn(function() {
       $(this).find('.descripcion-medida').delay(1000).slideDown();
     });
+  }
+  var temas = dame_temas_url();
+  for (i=0; i<temas.length; i++) {
+    //$('.medidas-programa').hide();
+    $('.categoria-propuestas [data-rel="'+temas[i]+'"]').trigger('click');
   }
 })(jQuery);
 
