--- a/plantilla-wp-cat.ejs
+++ b/plantilla-wp-cat.ejs
@@ -101,6 +101,7 @@
 	})();
 
 	function medidas_visibles() {
+		$('#medidas-visibles').html('<i class="fa fa-spinner fa-spin"></i>');
 		setTimeout(function() {
 			$('#medidas-visibles').text($('.medidas-programa:visible').length);
 		}, 500);
