Mejorado buscador de programa

--- a/plantilla-wp-cat.ejs
+++ b/plantilla-wp-cat.ejs
@@ -20,7 +20,8 @@
         </div>
     </div>
 
-	<div class="medidas">   
+	<div class="medidas">
+		<div style="width:100%;height:1px;"></div>  
 	<% medidas.forEach(function(medida){ %>
 		<div id="medida-<%= medida.num %>" class="medidas-programa" data-eje="<%= medida.eje %>">
 		    <div class="numero-medida"><%= medida.num %></div>
