Cambios en la estructura html del buscador

--- a/plantilla-wp-cat.ejs
+++ b/plantilla-wp-cat.ejs
@@ -10,9 +10,9 @@
     </div>
 
 	<div class="busquedas">
-		<h3><i class="fa fa-search"></i> Búsquedas</h3>
+		<i class="fa fa-search"></i>
 		<input id="busca" type="search" placeholder="Buscar en el programa">
-		<p><span id="medidas-visibles"></span> medidas encontradas</p>
+		<span> <span id="medidas-visibles"></span> medidas encontradas</span>
 	</div>
 
 	<div class="medidas">
