Añadida cadena de traducción para "Buscar en el programa"

--- a/plantilla-wp-cat.ejs
+++ b/plantilla-wp-cat.ejs
@@ -12,7 +12,7 @@
 	<div class="busquedas">
 		<div class="buscar-programa">
 			<i class="fa fa-search"></i>
-			<input id="busca" type="search" placeholder="Buscar en el programa">
+			<input id="busca" type="search" placeholder="<%= i18n.__("Buscar en el programa") %>">
 		</div>
 		<div class="loader-medidas">
 			<span><span id="medidas-visibles"></span> medidas encontradas</span>
