Cambios en programa

--- a/plantilla-wp-rescate.ejs
+++ b/plantilla-wp-rescate.ejs
@@ -28,7 +28,7 @@
 		      <div class="descripcion-medida">
                 <%- medida.descripcion %>
                 <div class="social">
-                  <p>¡Comparte esta medida en redes sociales!</p>
+                  <p><strong>¡Comparte esta medida en redes sociales!</strong></p>
                   <a href=""><i class="fa fa-facebook-official"></i></a>
                   <a href=""><i class="fa fa-twitter"></i></a>
                   <a href="" data-action="share/whatsapp/share"><i class="fa fa-whatsapp"></i></a>
