--- a/plantilla-wp-cat.ejs
+++ b/plantilla-wp-cat.ejs
@@ -32,13 +32,13 @@
             <% }); %>
 		        </div>
 		        <div class="descripcion-medida">
-              <%- medida.descripcion %>
               <div class="social">
-				<p>¡Comparte esta medida en redes sociales!</p>
+				<p><strong>¡Comparte esta medida en redes sociales!</strong></p>
                 <a href=""><i class="fa fa-facebook-official"></i></a>
                 <a href=""><i class="fa fa-twitter"></i></a>
                 <a href="" data-action="share/whatsapp/share"><i class="fa fa-whatsapp"></i></a>
               </div>
+              <%- medida.descripcion %>
             </div>
 		    </div>
 		</div>
