--- a/plantilla-wp-rescate.ejs
+++ b/plantilla-wp-rescate.ejs
@@ -26,13 +26,14 @@
 		    <div class="titulo-medida">
 		      <h4><%= medida.titulo %></h4>
 		      <div class="descripcion-medida">
-                <%- medida.descripcion %>
                 <div class="social">
                   <p><strong>¡Comparte esta medida en redes sociales!</strong></p>
                   <a href=""><i class="fa fa-facebook-official"></i></a>
                   <a href=""><i class="fa fa-twitter"></i></a>
                   <a href="" data-action="share/whatsapp/share"><i class="fa fa-whatsapp"></i></a>
                 </div>
+				<p></p>
+                <%- medida.descripcion %>
               </div>
 		    </div>
 		</div>
@@ -133,7 +134,7 @@
     var title = encodeURI($(medida).find('.titulo-medida h4').text());
     var descr = encodeURI($(medida).find('.descripcion-medida').text());
     var num_medida = $(medida).find('.numero-medida').text();
-	var url = encodeURI('http://laoportunidaddeunpais.es/fb-share/rescate/es/'+num_medida+'.html');
+	var url = encodeURI('http://lasonrisadeunpais.es/fb-share/rescate/es/'+num_medida+'.html');
     window.open('https://www.facebook.com/sharer/sharer.php?u=' + url + '&amp;t=' + title, 'sharer', 'top=' + winTop + ',left=' + winLeft + ',toolbar=0,status=0,width=520,height=350');
   });
   $('.social .fa-twitter').parent().on('click', function(e) {
@@ -142,7 +143,7 @@
     var winLeft = (screen.width / 2) - (520 / 2);
     var medida = $(this).parents('.medidas-programa');
     var num_medida = $(medida).find('.numero-medida').text();
-    var url = encodeURI(url_base + '?medida=' + num_medida);
+    var url = encodeURI('http://lasonrisadeunpais.es/fb-share/rescate/es/'+num_medida+'.html');
     var tweet = encodeURI($(medida).find('.titulo-medida h4').text()) + ' ' + url;
     window.open('https://twitter.com/home?status=' + tweet, 'sharer', 'top=' + winTop + ',left=' + winLeft + ',toolbar=0,status=0,width=520,height=350');
   });
@@ -153,7 +154,7 @@
     var winLeft = (screen.width / 2) - (520 / 2);
     var medida = $(this).parents('.medidas-programa');
     var num_medida = parseInt($(medida).find('.numero-medida').text());
-    var url = encodeURI(url_base + '?medida=' + num_medida);
+    var url = encodeURI('http://lasonrisadeunpais.es/fb-share/rescate/es/'+num_medida+'.html');
     var texto = encodeURI($(medida).find('.titulo-medida h4').text()) + ' ' + url;
     window.open('whatsapp://send?text=' + texto, 'sharer', 'top=' + winTop + ',left=' + winLeft + ',toolbar=0,status=0,width=520,height=350');
   });
